Add unit tests for TeamAttendanceController and TeamAttendanceServiceImpl
- Implemented tests for TeamAttendanceController to verify attendance overview and employee registration functionalities.
- Added tests for TeamAttendanceServiceImpl to ensure correct attendance metrics calculations and authorization checks.
- Created CSS styles for the team attendance page to enhance UI/UX.
- Developed JavaScript functionality for team attendance search and period selection.
- Added Thymeleaf template tests to validate rendering of attendance overview and detail pages.